
syntax = "proto3";

package pb;

service UserService {
    rpc GetUser (GetRequest) returns (UserResponse) {}

    rpc CreateUser (CreateRequest) returns (UserResponse) {}
}

// Requests

message GetRequest {
	string id = 1;
}

message CreateRequest {
	User user = 1;
}

// Responses

message UserResponse {
    User user = 1;
}

// STRUCTURE

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
	string username = 5;
}
